--- a/src/company/appsco-company-idp-settings-openid-form.html
+++ b/src/company/appsco-company-idp-settings-openid-form.html
@@ -150,11 +150,11 @@
             },
 
             _computeNeedsClientId: function(integration) {
-                return integration.id === 'generic_open_id' || integration.id === 'bamboo_hr';
+                return integration.id === 'generic_open_id';
             },
 
             _computeNeedsClientSecret: function(integration) {
-                return integration.id === 'generic_open_id' || integration.id === 'bamboo_hr';
+                return integration.id === 'generic_open_id';
             },
 
             _computeNeedsAuthUrl: function(integration) {
