DASH-3884 [OpenID] Add discovery route and expand OpenID resource settings with entity id field

--- a/src/appsco-manage-resource-page.html
+++ b/src/appsco-manage-resource-page.html
@@ -129,6 +129,12 @@
                         </div>
                     </template>
 
+                    <template is="dom-if" if="[[ application.discovery ]]">
+                        <div class="info">
+                                Discovery url: [[ application.discovery ]] <appsco-copy value="[[ application.discovery ]]" name="discoveryUrl"></appsco-copy>
+                        </div>
+                    </template>
+
                     <div class="info">
                         Last modified: [[ _lastEditedDate ]] by [[ application.last_modified.account ]].
                     </div>
