DASH-3886 Rename group option

--- a/src/appsco-app-header.html
+++ b/src/appsco-app-header.html
@@ -63,6 +63,7 @@
 
 <link rel="import" href="components/group/appsco-company-remove-group.html">
 <link rel="import" href="components/group/appsco-company-add-group.html">
+<link rel="import" href="components/group/appsco-company-rename-group.html">
 <link rel="import" href="components/group/appsco-resource-add-groups.html">
 <link rel="import" href="components/group/appsco-group-add-resource.html">
 <link rel="import" href="components/group/appsco-resource-remove-from-group.html">
