--- a/src/company/appsco-company-idp-settings.html
+++ b/src/company/appsco-company-idp-settings.html
@@ -471,6 +471,8 @@
                             body: this._getEncodedBodyValues(form)
                         };
 
+                    console.log('Request options: ', options);
+
                     if (this.domain.hasIdp) {
                         options.url = this.domain.meta.idpConfig;
                         options.method = 'PUT';
