--- a/index.html
+++ b/index.html
@@ -37,13 +37,6 @@
     <meta name="msapplication-tap-highlight" content="no">
 
     <script>
-        // Setup Polymer options
-        window.Polymer = {
-            dom: 'shadow',
-            lazyRegister: true,
-            disableUpgradeEnabled: true
-        };
-
         // Load pre-caching Service Worker
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function() {
@@ -51,14 +44,13 @@
             });
         }
     </script>
-    <script src="/bower_components/webcomponentsjs/custom-elements-es5-adapter.js" type="text/javascript"></script>
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="/bower_components/web-animations-js/web-animations-next-lite.min.js"></script>
     <script src="/bower_components/popper.js/dist/umd/popper.js" defer></script>
     <script src="/bower_components/popper.js/dist/umd/popper-utils.js" defer></script>
 
     <link rel="import" href="/src/appsco-app.html">
-    <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
+    <script type="text/javascript" src="https://js.stripe.com/v3/" defer></script>
 
     <style>
         body {
