DASH-3910 Optional page config request

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -1103,7 +1103,7 @@
 
         <!--endRegion Shared-->
 
-        <iron-ajax auto
+        <iron-ajax
                    id = "getPageConfigRequest"
                    url="[[ api.pageConfigApi ]]"
                    on-response="_onGetPageConfig"
@@ -1619,6 +1619,10 @@
                         notify: true
                     },
 
+                    pageConfigResponse: {
+                        type: Object
+                    },
+
                     _pageConfig: {
                         type: Object,
                         value: function() {
@@ -1654,7 +1658,8 @@
                     '_changeTheme(_companyPage, currentCompany)',
                     '_redirectToCompany(page, currentCompany, account)',
                     '_setupCompanyAccountPage(page, account)',
-                    '_handlePagePermission(currentCompany, page)'
+                    '_handlePagePermission(currentCompany, page)',
+                    '_processPageConfigResponse(pageConfigResponse)'
                 ];
             }
 
@@ -1767,6 +1772,9 @@
                         }
                         if (undefined === this.contactCompaniesResponse) {
                             this.shadowRoot.getElementById('getCompaniesAccountIsContactIn').generateRequest();
+                        }
+                        if (undefined === this.pageConfigResponse) {
+                            this.shadowRoot.getElementById('getPageConfigRequest').generateRequest();
                         }
                     }.bind(this), 0);
                 }
@@ -2230,8 +2238,11 @@
             }
 
             _onGetPageConfig(event) {
-                const pageConfig = event.detail.response,
-                    _pageConfig = JSON.parse(JSON.stringify(this._pageConfig));
+                this.set('pageConfigResponse', event.detail.response);
+            }
+
+            _processPageConfigResponse(pageConfig) {
+                const _pageConfig = JSON.parse(JSON.stringify(this._pageConfig));
 
                 for (const key in pageConfig) {
                     _pageConfig[key] = pageConfig[key];
