DASH-3913 Business tutorials

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             });
         }
     </script>
-    <script src="/node_modules/web-animations-js/web-animations-next-lite.min.js" defer></script>
-    <script src="/node_modules/clientjs/dist/client.min.js" defer></script>
+    <script type="text/javascript" src="/node_modules/web-animations-js/web-animations-next-lite.min.js" defer></script>
+    <script type="text/javascript" src="/node_modules/clientjs/dist/client.min.js" defer></script>
     <script type="text/javascript" src="https://js.stripe.com/v3/" defer></script>
     <style>
         body {
