DASH-3991 Performance tuning home page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <meta name="msapplication-tap-highlight" content="no">
     <script type="text/javascript">
         window.polymerSkipLoadingFontRoboto = true;
+        window.Polymer = {
+            fastDomIf: true,
+            removeNestedTemplates: true
+        };
     </script>
 
     <script type="module">
